java-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-demo
  namespace: java-demo
spec:
  selector:
    matchLabels:
      app: java-demo
  replicas: 2
  template:
    metadata:
      labels:
        app: java-demo
    spec:
      containers:
      - image: fstab/java-demo
        name: java-demo
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: java-demo
  namespace: java-demo
spec:
  selector:
    app: java-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
