http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: java-demo-route
  namespace: java-demo
spec:
  parentRefs:
    - name: gw-entrypoint
      namespace: gateway-api
  hostnames:
    - "java-demo.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: java-demo
          port: 80
