ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-demo-ingress
  namespace: java-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - java-demo.devops.com
    secretName: java-demo-local-tls
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: java-demo
            port:
              number: 80
    host: java-demo.devops.com
